--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9624e32e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f8fcaa2b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "094835d4",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "81bcff40",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,51 @@
     "                        lineType=lineType,bottomLeftOrigin=bottomLeftOrigin )"
    ]
   },
-
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "281914d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model=YOLO('yolov8m.pt')\n",
+    "video=cv.VideoCapture(video_path)\n",
+    "#video frames number \n",
+    "length = int(video.get(cv.CAP_PROP_FRAME_COUNT))\n",
+    "frame_proc=0\n",
+    "while True:\n",
+    "    res , frame = video.read()\n",
+    "    results = model.track(frame,stream=True,tracker='botsort.yaml',persist=True,imgsz=640)\n",
+    "    #doesnot work on last frame - freezing and crashing kernel \n",
+    "    #  if not res:\n",
+    "    #     break\n",
+    "    for i in results:\n",
+    "        annot=Annot(img=frame,result=i)\n",
+    "        annot.rect()\n",
+    "        annot.text()\n",
+    "        count(frame,i)\n",
+    "        cv.imshow('yolo',frame)\n",
+    "    #counts how many frames are processed    \n",
+    "    frame_proc+=1\n",
+    "                                                # if it is last frame close \n",
+    "    if (cv.waitKey(1) & 0xFF == ord('q')) or frame_proc==length:\n",
+    "        break\n",
+    "video.release()\n",
+    "cv.destroyAllWindows()\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c843d54e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(len(obj_id))\n",
     "print(len(left_id))\n",
